--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "bottlejs": "^1.7.2",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "knex": "^0.17.6",
     "mongoose": "^5.6.0",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "objection": "^1.6.9"
   },
   "devDependencies": {
     "chai": "^4.2.0",
