--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "knex": "^0.17.6",
     "mongoose": "^5.6.0",
     "mysql": "^2.17.1",
-    "objection": "^1.6.9"
+    "objection": "^1.6.9",
+    "sprintf-js": "^1.1.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
