--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "knex": "^0.17.6",
     "mongoose": "^5.6.0",
     "mysql": "^2.17.1",
+    "no-case": "^2.3.2",
     "objection": "^1.6.9",
     "sprintf-js": "^1.1.2"
   },
