--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql": "^2.17.1",
     "no-case": "^2.3.2",
     "objection": "^1.6.9",
+    "objection-soft-delete": "^1.0.5",
     "sprintf-js": "^1.1.2"
   },
   "devDependencies": {
