Adding logger to config file

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "no-case": "^2.3.2",
     "objection": "^1.6.9",
     "objection-soft-delete": "^1.0.5",
-    "sprintf-js": "^1.1.2"
+    "sprintf-js": "^1.1.2",
+    "winston": "^3.2.1",
+    "winston-mail": "^1.5.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
