--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "bottlejs": "^1.7.2",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-joi-validation": "^1.0.0",
+    "joi": "^14.3.1",
     "knex": "^0.17.6",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.0",
     "mysql": "^2.17.1",
     "no-case": "^2.3.2",
     "objection": "^1.6.9",
+    "objection-password": "^2.0.0",
     "objection-soft-delete": "^1.0.5",
     "sprintf-js": "^1.1.2"
   },
