--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-joi-validation": "^1.0.0",
+    "express-mung": "^0.5.1",
     "joi": "^14.3.1",
     "knex": "^0.17.6",
     "moment": "^2.24.0",
     "mongoose": "^5.6.0",
     "mysql": "^2.17.1",
     "no-case": "^2.3.2",
+    "object-mapper": "^5.0.0",
     "objection": "^1.6.9",
     "objection-password": "^2.0.0",
     "objection-soft-delete": "^1.0.5",
