--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "objection": "^1.6.9",
     "objection-password": "^2.0.0",
     "objection-soft-delete": "^1.0.5",
+    "parse-comments": "^1.0.0",
     "sprintf-js": "^1.1.2",
     "winston": "^3.2.1",
     "winston-mail": "^1.5.2"
