Use ejs instead of handlebars for apidoc

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "bottlejs": "^1.7.2",
     "dotenv": "^8.0.0",
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-joi-validation": "^1.0.0",
     "express-mung": "^0.5.1",
@@ -38,7 +39,6 @@
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.13.0",
-    "express-handlebars": "^3.1.0",
     "joi-to-swagger": "^3.1.0",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
