--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^15.1.0",
     "body-parser": "^1.19.0",
     "bottlejs": "^1.7.2",
     "dotenv": "^8.0.0",
@@ -22,7 +23,7 @@
     "express": "^4.17.1",
     "express-joi-validation": "^1.0.0",
     "express-mung": "^0.5.1",
-    "joi": "^14.3.1",
+    "glob": "^7.1.4",
     "knex": "^0.17.6",
     "moment": "^2.24.0",
     "mongoose": "^5.6.0",
@@ -33,8 +34,7 @@
     "objection-password": "^2.0.0",
     "objection-soft-delete": "^1.0.5",
     "sprintf-js": "^1.1.2",
-    "winston": "^3.2.1",
-    "winston-mail": "^1.5.2"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
