--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hapi/joi": "^15.1.0",
     "body-parser": "^1.19.0",
     "bottlejs": "^1.7.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-joi-validation": "^1.0.0",
