--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-joi-validation": "^1.0.0",
+    "express-mung": "^0.5.1",
     "glob": "^7.1.4",
     "knex": "^0.17.6",
     "moment": "^2.24.0",
