--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "nyc mocha",
     "lint": "eslint .",
     "lint-fix": "npm run lint -- --fix",
-    "pretest": "npm run lint",
+    "pretest": "npm run lint-fix",
     "knex": "node -r dotenv/config ./node_modules/knex/bin/cli.js --knexfile app/config/knexfile.js"
   },
   "author": "",
