--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "lint-fix": "npm run lint -- --fix",
     "pretest": "npm run lint-fix",
     "knex": "node -r dotenv/config ./node_modules/knex/bin/cli.js --knexfile app/config/knexfile.js",
-    "knex-rb": "npm run knex migrate:rollback",
+    "knex-rollback": "npm run knex migrate:rollback",
     "knex-migrate": "npm run knex migrate:latest",
-    "knex-rb-migrate": "npm run knex migrate:rollback && npm run knex migrate:latest ",
+    "knex-refresh": "npm run knex migrate:rollback && npm run knex migrate:latest ",
     "deploy": "npm run knex-migrate && pm2-runtime ecosystem.config.js",
     "generate-module": "node app/console/module-generator.js"
-
   },
   "author": "",
   "license": "ISC",
@@ -42,6 +41,7 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.2",
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.13.0",
@@ -59,6 +59,7 @@
       "node": true,
       "mocha": true
     },
+    "parser": "babel-eslint",
     "parserOptions": {
       "ecmaVersion": 9,
       "sourceType": "module"
