--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "objection-db-errors": "^1.1.1",
     "objection-password": "^2.0.0",
     "objection-soft-delete": "^1.0.5",
+    "passport": "^0.4.0",
     "sprintf-js": "^1.1.2",
     "winston": "^3.2.1"
   },
