- Add default data to migrations - Finish permissions seeds

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "knex-rollback": "npm run knex migrate:rollback",
     "knex-migrate": "npm run knex migrate:latest",
     "knex-refresh": "npm run knex migrate:rollback && npm run knex migrate:latest ",
+    "knex-seed": "npm run knex seed:run",
     "deploy": "npm run knex-migrate && pm2-runtime ecosystem.config.js",
     "generate-module": "node app/console/module-generator.js"
   },
