--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-joi-validation": "^1.0.0",
     "express-mung": "^0.5.1",
     "glob": "^7.1.4",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.17.6",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
