Add key generator script

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "knex-refresh": "npm run knex migrate:rollback && npm run knex migrate:latest ",
     "knex-seed": "npm run knex seed:run",
     "deploy": "npm run knex-migrate && pm2-runtime ecosystem.config.js",
-    "generate-module": "node app/console/module-generator.js"
+    "generate-module": "node app/console/module-generator.js",
+    "generate-key": "node app/console/app-key-generator.js"
   },
   "author": "",
   "license": "ISC",
