--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "express-joi-validation": "^1.0.0",
     "express-mung": "^0.5.1",
     "glob": "^7.1.4",
     "jsonwebtoken": "^8.5.1",
@@ -43,6 +42,7 @@
     "socket.io": "^2.2.0",
     "socket.io-redis": "^5.2.0",
     "sprintf-js": "^1.1.2",
+    "sticky-session": "^1.1.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
