--- a/.env-dev
+++ b/.env-dev
@@ -9,3 +9,7 @@ DB_NAME=skeleton
 REDIS_HOST=redis
 REDIS_PORT=6379
 TIME_ZONE=UTC
+APP_SECRET=
+TOKEN_EXPIRES_IN=120
+AUTH_STRATEGY=local
+AUTH_GATEWAY=
