--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^15.1.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bottlejs": "^1.7.2",
     "cors": "^2.8.5",
