default client & auth secret generator

--- a/.env-dev
+++ b/.env-dev
@@ -9,7 +9,7 @@ DB_NAME=skeleton
 REDIS_HOST=redis
 REDIS_PORT=6379
 TIME_ZONE=UTC
-APP_SECRET=
 TOKEN_EXPIRES_IN=120
-AUTH_STRATEGY=local
-AUTH_GATEWAY=
+AUTH_GATEWAY=http://localhost:3000/oauth/token
+AUTH_STRATEGY=oauth2
+AUTH_SECRET=
