app name & app secret

--- a/.env-dev
+++ b/.env-dev
@@ -1,3 +1,5 @@
+APP_NAME=skeleton
+APP_VERSION=1
 NODE_ENV=development
 PORT=3000
 DB_HOST=db
@@ -9,7 +11,8 @@ DB_NAME=skeleton
 REDIS_HOST=redis
 REDIS_PORT=6379
 TIME_ZONE=UTC
-APP_SECRET=
 TOKEN_EXPIRES_IN=120
-AUTH_STRATEGY=local
-AUTH_GATEWAY=
+REFRESH_TOKEN_EXPIRES_IN=60
+AUTH_GATEWAY=http://localhost:3000/oauth/token
+AUTH_STRATEGY=oauth2
+AUTH_SECRET=
