--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
       ]
     },
     "globals": {
-      "container": true
+      "container": true,
+      "cronTasks":true
     }
   },
   "eslintIgnore": [
