--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,34 @@
-version: '3'
+version: '3.2'
 
 services:
-    db:
-      container_name: 'skeleton_db'
-      image: mysql:5.7
-      environment:
-        MYSQL_DATABASE: 'skeleton'
-        MYSQL_USER: 'skeleton'
-        MYSQL_PASSWORD: '1'
-        MYSQL_ROOT_PASSWORD: '1'
+    skeleton_proxy_sql:
+      container_name: 'skeleton_sql'
+      build: 
+        context: .
+        dockerfile: proxysql-dockerfile
       ports:
-        - 4001:3306
+        - 4001:6032
+        - 4002:6033
       restart: always
-    redis:
+
+
+    skeleton_redis:
       container_name: 'skeleton_redis'
       image: redis:alpine
       ports:
-        - 4002:6379
+        - 4003:6379
       restart: always
-    app:
+
+      
+    skeleton_app:
       container_name: 'skeleton'
       build: .
       links:
-        - "db"
+        - "skeleton_proxy_sql"
+        - "skeleton_redis"
       depends_on:
-        - "db"
+        - "skeleton_proxy_sql"
+        - "skeleton_redis"
       ports:
         - 4000:3000
       restart: always
