--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^15.1.1",
+    "@sendgrid/mail": "^6.4.0",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bottlejs": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-mung": "^0.5.1",
     "glob": "^7.1.6",
@@ -88,7 +90,7 @@
     },
     "globals": {
       "container": true,
-      "cronTasks":true
+      "cronTasks": true
     }
   },
   "eslintIgnore": [
