Bug fixes & update readme

--- a/.env-dev
+++ b/.env-dev
@@ -12,10 +12,9 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 TOKEN_EXPIRES_IN=120
 REFRESH_TOKEN_EXPIRES_IN=60
-AUTH_GATEWAY=http://localhost:3000/oauth/token
+AUTH_GATEWAY=http://localhost:3000/oauth
 AUTH_STRATEGY=oauth2
 AUTH_SECRET=
-APP_SECRET=
 CRON_PATH=/usr/src/app/cron.js
 CRON_USER=root
 CONFIRM_TOKEN_EXPIRES_IN=5
